# page_analyzer

./: .coverage  .env.example  .gitignore  Makefile  README.md  build.sh  coverage.xml  database.sql  pyproject.toml
.github/workflows/: build.yaml
page_analyzer/: __init__.py  app.py  db.py  index.html  parser.py  utils.py
page_analyzer/templates/: all_urls_page.html  index.html  show.html
page_analyzer/templates/layout/: default.html
tests/: test_page_analyzer.py  test_parser.py  test_utils.py
tests/fixtures/: index.html
