[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Rem M. <morrig407@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
flake8 = "^7.1.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
